--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^2.1.1",
     "expo": "~52.0.28",
     "expo-status-bar": "~2.0.1",
+    "moment-hijri": "^3.0.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-async-storage": "^0.0.1",
