--- a/app.json
+++ b/app.json
@@ -27,8 +27,9 @@
     },
     "extra": {
       "eas": {
-        "projectId": "b4745e4f-821a-43fc-88a2-9db8fb06d98b"
+        "projectId": "8dbb9a8c-7250-41a6-a264-df416556a461"
       }
-    }
+    },
+    "owner": "hhhhjjj"
   }
 }
