--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
     "expo": "~52.0.28",
+    "expo-notifications": "^0.29.13",
     "expo-status-bar": "~2.0.1",
     "moment-hijri": "^3.0.0",
     "react": "18.3.1",
