--- a/eas.json
+++ b/eas.json
@@ -7,7 +7,7 @@
     },
     "preview2": {
       "android": {
-        "gradleCommand": ":app:assembleRelease"
+        "buildType": "apk"
       }
     },
     "preview3": {
