--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "مواقيت الصلاة للشيعة",
     "slug": "ShiaPrayerLeb",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -17,7 +17,9 @@
       "supportsTablet": true
     },
     "android": {
-      "versionCode": 5 , 
+      "googleServicesFile": "./google-services.json",
+
+      "versionCode": 6 , 
 
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
