--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-firebase/app": "^21.10.0",
+    "@react-native-firebase/messaging": "^21.10.0",
     "expo": "~52.0.28",
-    "expo-notifications": "^0.29.13",
+    "expo-constants": "~17.0.5",
+    "expo-device": "~7.0.2",
+    "expo-notifications": "~0.29.13",
     "expo-status-bar": "~2.0.1",
     "moment-hijri": "^3.0.0",
     "react": "18.3.1",
