--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-firebase/app": "^21.10.0",
+    "@react-native-firebase/auth": "^21.10.0",
+    "@react-native-firebase/crashlytics": "^21.10.0",
     "@react-native-firebase/messaging": "^21.10.0",
     "expo": "~52.0.28",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.5",
     "expo-device": "~7.0.2",
     "expo-notifications": "~0.29.13",
