--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.76.6",
     "react-native-async-storage": "^0.0.1",
     "react-native-safe-area-context": "^5.2.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
