--- a/app.json
+++ b/app.json
@@ -12,7 +12,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-  
+    "notification": {
+      "icon": "./assets/favicon.png"
+    },
     "ios": {
       "supportsTablet": true
     },
