--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-async-storage": "^0.0.1",
+    "react-native-compass-heading": "^2.0.1",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0"
