--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ android/
 
 pdfs/
 
+.firebaserc
+firebase.json
+firebaseConfig.js
+google-services.json
+shiaaprayerleb-firebase-adminsdk-fbsvc-4df2158e3c.json
