--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
-    "@react-native-firebase/app": "^21.10.0",
+    "@react-native-firebase/app": "^21.10.1",
     "@react-native-firebase/auth": "^21.10.0",
     "@react-native-firebase/crashlytics": "^21.10.0",
+    "@react-native-firebase/firestore": "^21.10.1",
     "@react-native-firebase/messaging": "^21.10.0",
     "expo": "~52.0.28",
     "expo-build-properties": "~0.13.2",
@@ -26,6 +27,7 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-compass-heading": "^2.0.1",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0"
