--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.1",
     "expo": "~52.0.28",
     "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.5",
     "expo-device": "~7.0.2",
-    "expo-notifications": "~0.29.13",
+    "expo-notifications": "^0.29.13",
     "expo-status-bar": "~2.0.1",
     "moment-hijri": "^3.0.0",
     "react": "18.3.1",
@@ -22,7 +23,6 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-compass-heading": "^2.0.1",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0"
