--- a/eas.json
+++ b/eas.json
@@ -2,7 +2,8 @@
   "build": {
     "preview": {
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "app-bundle",
+        "image": "latest"
       }
     },
     "preview2": {
