--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.28",
     "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.5",
@@ -22,9 +24,11 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-compass-heading": "^2.0.1",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-progress": "^5.0.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.9.1",
     "react-native-size-matters": "^0.4.2",
     "react-native-vector-icons": "^10.2.0"
   },
