--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-firebase/app": "^21.11.0",
+    "@react-native-firebase/remote-config": "^21.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.28",
@@ -23,6 +25,7 @@
     "react-native": "0.76.6",
     "react-native-async-storage": "^0.0.1",
     "react-native-compass-heading": "^2.0.1",
+    "react-native-device-info": "^14.0.4",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-progress": "^5.0.1",
@@ -30,7 +33,8 @@
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
     "react-native-size-matters": "^0.4.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-version-check": "^3.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
