Initialize Android project structure and add essential configuration files

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,9 @@ buildscript {
         minSdkVersion = Integer.parseInt(findProperty('android.minSdkVersion') ?: '24')
         compileSdkVersion = Integer.parseInt(findProperty('android.compileSdkVersion') ?: '35')
         targetSdkVersion = Integer.parseInt(findProperty('android.targetSdkVersion') ?: '34')
-        kotlinVersion = findProperty('android.kotlinVersion') ?: '1.9.25'
+        // Upgrade Kotlin to 2.1.0 to match the dependency metadata version
+        kotlinVersion = findProperty('android.kotlinVersion') ?: '2.1.0'
+        kotlin_version = '2.0.0'
 
         ndkVersion = "26.1.10909125"
     }
@@ -18,7 +20,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.4.1'
         classpath('com.android.tools.build:gradle')
         classpath('com.facebook.react:react-native-gradle-plugin')
-        classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -26,10 +28,9 @@ apply plugin: "com.facebook.react.rootproject"
 
 allprojects {
     repositories {
-
         google()
         mavenCentral()
-         maven {
+        maven {
             url "$rootDir/../node_modules/@notifee/react-native/android/libs"
         }
         maven {
@@ -40,9 +41,6 @@ allprojects {
             // Android JSC is installed from npm
             url(new File(['node', '--print', "require.resolve('jsc-android/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim(), '../dist'))
         }
-
-        
-      
         maven { url 'https://www.jitpack.io' }
     }
 }
