--- a/.gitignore
+++ b/.gitignore
@@ -35,10 +35,7 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 
-android/app/google-services.json
-android/app/build.gradle
-android/app/@hhhhjjj__ShiaPrayerLeb.jks
-android\@hhhhjjj__ShiaPrayerLeb.jks
+android/
 pdfs/
 
 
