--- a/.github/workflows/update_prayer_times.yml
+++ b/.github/workflows/update_prayer_times.yml
@@ -5,6 +5,9 @@ on:
     - cron: '5 0 1 * *'  # Run at 12:05 AM on the first day of each month
   workflow_dispatch:  # Allow manual triggering
 
+permissions:
+  contents: write
+
 jobs:
   update-data:
     runs-on: ubuntu-latest
@@ -32,5 +35,5 @@ jobs:
           git config --global user.email 'actions@github.com'
           git add -A pdfs/
           git add -A assets/
-          git diff --staged --quiet || git commit -m "Update prayer times data for $(date +'%B %Y') [skip ci]"
+          git diff --staged --quiet || git commit -m "Update prayer times data for $(date +'%B %Y') [skip ci]'
           git push
