--- a/.github/workflows/update_prayer_times.yml
+++ b/.github/workflows/update_prayer_times.yml
@@ -35,5 +35,5 @@ jobs:
           git config --global user.email 'actions@github.com'
           git add -A pdfs/
           git add -A assets/
-          git diff --staged --quiet || git commit -m "Update prayer times data for $(date +'%B %Y') [skip ci]'
+          git diff --staged --quiet || git commit -m "Update prayer times data for $(date +'%B %Y') [skip ci]"
           git push
