--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-community/slider": "^4.5.6",
     "@react-native-firebase/app": "^21.11.0",
     "@react-native-firebase/remote-config": "^21.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
