--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -58,7 +58,7 @@ expo.useLegacyPackaging=false
 
 android.extraMavenRepos=[]
 
-android.overridePathCheck=true
+android.overridePathCheck=false
 
 MYAPP_UPLOAD_STORE_FILE=@hhhhjjj__ShiaPrayerLeb.jks
 MYAPP_UPLOAD_KEY_ALIAS=170bd2fc66af05b38d0c140491eec8f1
