--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.5",
     "expo-device": "~7.0.2",
+    "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "moment-hijri": "^3.0.0",
     "react": "18.3.1",
@@ -29,6 +30,7 @@
     "react-native-device-info": "^14.0.4",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.2.0",
