--- a/.github/workflows/update_prayer_times.yml
+++ b/.github/workflows/update_prayer_times.yml
@@ -39,6 +39,20 @@ jobs:
           git diff --staged --quiet || git commit -m "Update prayer times data for $(date +'%B %Y') [skip ci]"
           git push
       
+      - name: Send email notification on success
+        if: success()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.office365.com
+          server_port: 587
+          secure: true
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: Prayer Times Update Succeeded
+          body: The prayer times update workflow completed successfully on ${{ github.repository }} for $(date +'%B %Y').
+          to: hnjm12369@outlook.com
+          from: ${{ secrets.EMAIL_USERNAME }}
+      
       - name: Send email notification on failure
         if: failure()
         uses: dawidd6/action-send-mail@v3
@@ -50,5 +64,5 @@ jobs:
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: Prayer Times Update Failed
           body: The prayer times update workflow failed on ${{ github.repository }}. Manual intervention required.
-          to: hnjm12309@outlook.com  
+          to: hnjm12369@outlook.com  
           from: ${{ secrets.EMAIL_USERNAME }}
