--- a/.github/workflows/update_prayer_times.yml
+++ b/.github/workflows/update_prayer_times.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           server_address: smtp.office365.com
           server_port: 587
-          secure: true
+          secure: starttls
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: Prayer Times Update Succeeded
@@ -59,7 +59,7 @@ jobs:
         with:
           server_address: smtp.office365.com  
           server_port: 587                    
-          secure: true
+          secure: starttls
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: Prayer Times Update Failed
