--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
+    "react-native-sensors": "^7.3.6",
     "react-native-size-matters": "^0.4.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-version-check": "^3.4.7"
