--- a/.github/workflows/update_prayer_times.yml
+++ b/.github/workflows/update_prayer_times.yml
@@ -2,8 +2,8 @@ name: Update Prayer Times Data
 
 on:
   schedule:
-    - cron: '5 0 1 * *'  # Run at 12:05 AM on the first day of each month
-    - cron: '0 12 1 * *'  # Try again at noon on the first day 
+    - cron: '5 21 1 * *'  # Run at 12:05 AM Lebanon time (9:05 PM UTC) on the first day of each month
+    - cron: '0 9 1 * *'   # Try again at 12:00 PM Lebanon time (9:00 AM UTC) on the first day
   workflow_dispatch:  # Allow manual triggering
 
 permissions:
