--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-sensors": "^7.3.6",
     "react-native-size-matters": "^0.4.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-version-check": "^3.4.7"
+    "react-native-version-check": "^3.4.7",
+    "react-native-webview": "^13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
