--- a/package.json
+++ b/package.json
@@ -10,35 +10,36 @@
   },
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
-    "@react-native-async-storage/async-storage": "^2.1.1",
-    "@react-native-community/slider": "^4.5.6",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "4.5.5",
     "@react-native-firebase/app": "^21.11.0",
     "@react-native-firebase/remote-config": "^21.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.28",
-    "expo-build-properties": "~0.13.2",
+    "expo": "~52.0.47",
+    "expo-build-properties": "~0.13.3",
     "expo-constants": "~17.0.5",
-    "expo-device": "~7.0.2",
-    "expo-linear-gradient": "^14.0.2",
+    "expo-device": "~7.0.3",
+    "expo-intent-launcher": "~12.0.2",
+    "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "moment-hijri": "^3.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.9",
     "react-native-android-location-services-dialog-box": "^2.8.2",
     "react-native-async-storage": "^0.0.1",
     "react-native-device-info": "^14.0.4",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
     "react-native-rate": "^1.2.12",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-version-check": "^3.4.7",
-    "react-native-webview": "^13.15.0"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
