--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -60,8 +60,11 @@ android.extraMavenRepos=[]
 
 android.overridePathCheck=false
 
-MYAPP_UPLOAD_STORE_FILE=@hhhhjjj__ShiaPrayerLeb.jks
-MYAPP_UPLOAD_KEY_ALIAS=170bd2fc66af05b38d0c140491eec8f1
-MYAPP_UPLOAD_STORE_PASSWORD=b173e1fdfcf4e928a8dc7e6893576d86
-MYAPP_UPLOAD_KEY_PASSWORD=7169eb7cec113d0e4ad197e8103b2612
+# Android signing credentials should be provided via an untracked keystore.properties file at the project root.
+# Do NOT put secrets in this file. See keystore.properties.example for the expected keys.
+# Example (do not uncomment here):
+# MYAPP_UPLOAD_STORE_FILE=android/app/your-release-key.jks
+# MYAPP_UPLOAD_KEY_ALIAS=your_key_alias
+# MYAPP_UPLOAD_STORE_PASSWORD=your_store_password
+# MYAPP_UPLOAD_KEY_PASSWORD=your_key_password
 
