--- a/.github/workflows/update_prayer_times.yml
+++ b/.github/workflows/update_prayer_times.yml
@@ -2,9 +2,8 @@ name: Update Prayer Times Data
 
 on:
   schedule:
-    - cron: '5 21 1 * *'  # Run at 12:05 AM Lebanon time (9:05 PM UTC) on the first day of each month
-    - cron: '0 9 1 * *'   # Try again at 12:00 PM Lebanon time (9:00 AM UTC) on the first day
-  workflow_dispatch:  # Allow manual triggering
+    - cron: '5 21 * * *'   # Runs daily at 21:05 UTC (00:05 Beirut local during summer, 23:05 in winter)
+  workflow_dispatch:        # Allow manual triggering
 
 permissions:
   contents: write
@@ -14,6 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Check if today is the 1st in Beirut
+        run: |
+          if [ "$(TZ='Asia/Beirut' date +'%d')" != "01" ]; then
+            echo "Not the 1st in Beirut — exiting."
+            exit 0
+          fi
+
       - name: Checkout code
         uses: actions/checkout@v2
       
