--- a/.github/workflows/update_prayer_times.yml
+++ b/.github/workflows/update_prayer_times.yml
@@ -2,8 +2,9 @@ name: Update Prayer Times Data
 
 on:
   schedule:
-    - cron: '5 21 * * *'   # Runs daily at 21:05 UTC (00:05 Beirut local during summer, 23:05 in winter)
-  workflow_dispatch:        # Allow manual triggering
+    - cron: '10 21 1 * *'   # 21:10 UTC on the 1st -> 00:10 Beirut during DST (UTC+3)
+    - cron: '10 22 1 * *'   # 22:10 UTC on the 1st -> 00:10 Beirut during standard time (UTC+2)
+  workflow_dispatch:            
 
 permissions:
   contents: write
