--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -54,7 +54,11 @@ expo.webp.animated=false
 EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
-expo.useLegacyPackaging=false
+## 16 KB page size mitigation:
+## Google Play requires 16 KB page size support (Nov 1 2025). Until we upgrade
+## to AGP >= 8.5.1 (which auto-aligns uncompressed libs) we force compression of
+## native libs so alignment is no longer an issue.
+expo.useLegacyPackaging=true
 
 android.extraMavenRepos=[]
 
