--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -53,5 +53,13 @@
         android:name="android.appwidget.provider"
         android:resource="@xml/prayer_widget_info" />
     </receiver>
+    <receiver android:name=".PrayerWidgetSmallProvider" android:exported="true">
+      <intent-filter>
+        <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+      </intent-filter>
+      <meta-data
+        android:name="android.appwidget.provider"
+        android:resource="@xml/prayer_widget_small_info" />
+    </receiver>
   </application>
 </manifest>
