--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -53,12 +53,10 @@ expo.webp.animated=false
 # Enable network inspector
 EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
-# Use legacy packaging to compress native libraries in the resulting APK.
-## 16 KB page size mitigation:
-## Google Play requires 16 KB page size support (Nov 1 2025). Until we upgrade
-## to AGP >= 8.5.1 (which auto-aligns uncompressed libs) we force compression of
-## native libs so alignment is no longer an issue.
-expo.useLegacyPackaging=true
+# 16 KB page size support:
+## AGP 8.5.1+ automatically aligns uncompressed native libraries to support 16 KB page sizes
+## Legacy packaging is disabled to allow AGP to handle 16 KB alignment automatically
+expo.useLegacyPackaging=false
 
 android.extraMavenRepos=[]
 
